--- a/app/views/shared/_loans_borrowed.html.erb
+++ b/app/views/shared/_loans_borrowed.html.erb
@@ -10,9 +10,7 @@
     <%= render partial: "shared/loan_card", object: loan, as: :loan,
     locals: {
       owner_pic: true,
-      overlay: "'s book'",
-      date_text: "Loan approved: ",
-      date_method: "approved_on",
+      overlay: "'s book'"
     } %>
 
 
