--- a/app/views/shared/_loans_requests_friends.html.erb
+++ b/app/views/shared/_loans_requests_friends.html.erb
@@ -11,15 +11,12 @@
     object: loan, as: :loan,
     locals: {
       owner_pic: false,
-      overlay: "wants this book",
-      date_text: "Requested: ",
-      date_method: "created_at",
+      overlay: "wants this book"
     } %>
-
     <div class="col-xs-12 col-md-4">
       <div class="flex-container-centered-vh list-row-130">
-       <%= link_to "Approve", approve_loan_path(loan), {class: "btn btn-primary btn-half-width", :method => :patch} %>
-       <%= link_to "Reject", reject_loan_path(loan), {class: "btn btn-default btn-half-width", :method => :patch} %>
+      <%= link_to "Approve", approve_loan_path(loan), {class: "btn btn-primary btn-half-width", :method => :patch} %>
+      <%= link_to "Reject", reject_loan_path(loan), {class: "btn btn-default btn-half-width", :method => :patch} %>
      </div>
    </div>
 
