--- a/app/views/shared/_loans_requests_mine.html.erb
+++ b/app/views/shared/_loans_requests_mine.html.erb
@@ -10,21 +10,19 @@
     <%= render partial: "shared/loan_card", object: loan, as: :loan,
     locals: {
       owner_pic: true,
-      overlay: "has this",
-      date_text: "Requested: ",
-      date_method: "created_at",
+      overlay: "has this"
     } %>
 
     <div class="col-xs-12 col-md-4">
       <div class="flex-container-centered-vh list-row-130">
-        <% if loan.rejected %>
+        <% if loan.status == "rejected" %>
         <div class="label label-danger" type="submit">Rejected</div>
         <div>
           <%= link_to close_pending_path(loan), {class: "btn-list-close", :method => :patch} do %>
           <i class="fa fa-times"></i>
           <% end %>
         </div>
-        <% elsif loan.confirmed %>
+        <% elsif loan.status == "approved" %>
         <div class="label label-success" type="submit">Approved</div>
         <div>
           <%= link_to close_pending_path(loan), {class: "btn-list-close", :method => :patch} do %>
