adding content for tag

--- a/app/views/loans/library.html.erb
+++ b/app/views/loans/library.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  <%= current_user.profile.first_name%>'s Library - PowOSh
+<% end %>
+
 <div class="library-page">
   <div class="wrapper-no-padding-bottom header-wrapper">
     <div class="container">
