--- a/app/views/books/googleresults.html.erb
+++ b/app/views/books/googleresults.html.erb
@@ -34,7 +34,7 @@
 
 
 
-<div class="tabs-profile">
+<div class="tabs-profile is-sticky">
 
   <%= link_to books_sharebook_path, class: "tabs-ind-2" do %>
     <span>Search Again</span>
