--- a/app/assets/stylesheets/pages/_borrow.scss
+++ b/app/assets/stylesheets/pages/_borrow.scss
@@ -1,3 +1,10 @@
+.sharebook-item {
+  min-height: calc(100vh - 50px - 60px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 body{
   background: white;
 }
