--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= stylesheet_link_tag    'application', media: 'all' %>
   </head>
-  <body>
+  <body class="<%= "#{params[:controller]}-#{params[:action]}" %>">
     <%= render 'shared/navbar' %>
     <%= render 'shared/toptabs' %>
     <%= render 'shared/flashes' %>
