--- a/app/views/shared/_toptabs.html.erb
+++ b/app/views/shared/_toptabs.html.erb
@@ -11,7 +11,7 @@
     <span>Share</span>
   <% end %>
 
-  <%= link_to books_borrow_path, class: "tabs-ind" do %>
+  <%= link_to books_borrow_path, class: "tabs-ind", id: 'borrow' do %>
     <i class="fa fa-book my-icon"></i>
     <span>Borrow</span>
   <% end %>
