--- a/app/views/books/googleresults.html.erb
+++ b/app/views/books/googleresults.html.erb
@@ -2,7 +2,7 @@
   <% @books.first(20).each do |book| %>
 
 
-  <div class="container">
+  <div class="container col-xs-12 col-sm-8 col-sm-offset-2">
     <div class="product">
 
       <div class='product-upvote'>
