--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -2,7 +2,7 @@
 
 <div class="add-margin-top">
   <div class="container">
-    <div class="row">
+    <div class="row col-xs-12 col-sm-8 col-sm-offset-2">
       <% @books.each do |book| %>
 
       <%= link_to book_path(book.id) do %>
