--- a/app/views/shared/_toptabs.html.erb
+++ b/app/views/shared/_toptabs.html.erb
@@ -2,22 +2,22 @@
 
 
   <%= link_to root_path, class: "tabs-ind" do %>
-    <i class="fa fa-home my-icon"></i>
+    <i class="mdi mdi-home-variant my-icon"></i>
     <span>Home</span>
   <% end %>
 
    <%= link_to books_sharebook_path, class: "tabs-ind" do %>
-    <i class="fa fa-share my-icon"></i>
+    <i class="mdi mdi-upload my-icon"></i>
     <span>Share</span>
   <% end %>
 
   <%= link_to books_borrow_path, class: "tabs-ind", id: 'borrow' do %>
-    <i class="fa fa-book my-icon"></i>
+    <i class="mdi mdi-book-open-page-variant my-icon"></i>
     <span>Borrow</span>
   <% end %>
 
   <%= link_to library_path(current_user), class: "tabs-ind" do %>
-    <i class="fa fa-bar-chart my-icon"></i>
+    <i class="mdi mdi-chart-bar my-icon"></i>
     <span>Track</span>
   <% end %>
 
