improved top tabs when active

--- a/app/assets/stylesheets/layout/_toptabs.scss
+++ b/app/assets/stylesheets/layout/_toptabs.scss
@@ -17,6 +17,25 @@
   }
 }
 
+.books-sharebook {
+  #share {
+    background: linear-gradient(to top, #5E5E5E, #272626);
+  }
+}
+
+
+.books-index {
+  #home {
+    background: linear-gradient(to top, #5E5E5E, #272626);
+  }
+}
+
+.loans-library {
+  #track {
+    background: linear-gradient(to top, #5E5E5E, #272626);
+  }
+}
+
 
 .tabs-ind {
   flex: 1 1 0%;
