--- a/app/views/loans/library.html.erb
+++ b/app/views/loans/library.html.erb
@@ -12,7 +12,7 @@
 
             <h3>Library</h3>
 
-            <ul class="nav nav-pills text-center" id="library-tabs" role="tablist">
+            <ul class="nav nav-tabs text-center" id="library-tabs" role="tablist">
               <li role="presentation" class="active tab-xs-quarter"><a href="#todo" aria-controls="home" role="tab" data-toggle="tab">Requests</a></li>
               <li role="presentation" class="tab-xs-quarter"><a href="#shared" aria-controls="home" role="tab" data-toggle="tab">Shared</a></li>
               <li role="presentation" class="tab-xs-quarter"><a href="#borrowed" aria-controls="profile" role="tab" data-toggle="tab">Borrowed</a></li>
@@ -34,6 +34,7 @@
 
           <div role="tabpanel" class="tab-pane active" id="todo">
             <%= render 'shared/loans_requests_friends' %>
+            <%= render 'shared/loans_returned' %>
             <%= render 'shared/loans_requests_mine' %>
           </div>
 
