--- a/app/views/shared/_loans_shared.html.erb
+++ b/app/views/shared/_loans_shared.html.erb
@@ -15,7 +15,7 @@
 
     <div class="col-xs-12 col-md-4">
       <div class="flex-container-centered-vh list-row-130">
-        <%= link_to "Get Back", "#", {class: "btn btn-primary btn-half-width", :method => :patch} %>
+        <%= link_to "Mark Returned", return_book_path(loan), {class: "btn btn-primary btn-half-width", :method => :patch} %>
       </div>
     </div>
 
