--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -3,20 +3,22 @@
 </div>
 
 <div class="container">
-<%= simple_form_for [@user, @book] do |f| %>
+<%= simple_form_for [@user, @book], :url => {:controller => 'books', :action => 'create'}, :method => :post do |f| %>
   <%= f.error_notification %>
-  <%= f.label :title, 'Titre' %>
+  <%= f.label :title, 'Title' %>
   <%= f.input :title, label: false, placeholder:"Ex: A la recherche du temps perdu" %>
-  <%= f.label :author, 'Auteur' %>
+  <%= f.label :author, 'Author' %>
   <%= f.input :author, label: false, placeholder:"Marcel Proust" %>
-  <%= f.label :language, 'Langue' %>
+  <%= f.label :language, 'Language' %>
   <%= f.input :language, label: false, collection: Book::LANGUAGES,  placeholder:"Français" %>
-  <%= f.label :my_description, 'Ma description' %>
-  <%= f.input :my_description, label: false, placeholder:"J'adore ce livre parce que..." %>
-  <%= f.label :my_rating, 'Mon évaluation' %>
+  <%= f.label :my_description, 'My own description' %>
+  <%= f.input :my_description, label: false, placeholder:"I love that book because..." %>
+  <%= f.label :my_rating, 'My rating' %>
   <%= f.input :my_rating, label: false, collection: 1..10 %>
   <%= f.label :isbn, 'Code ISBN' %>
   <%= f.input :isbn, label: false, placeholder:"978-1-56619-909-4" %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
 
   <%= f.button :submit %>
 <% end %>
