--- a/app/views/loans/library.html.erb
+++ b/app/views/loans/library.html.erb
@@ -48,9 +48,7 @@
           </div>
 
           <div role="tabpanel" class="tab-pane" id="library">
-            <% @books.each do |book| %>
-              <%= book.title %>
-            <% end %>
+            <%= render 'shared/my_library' %>
           </div>
 
 
