--- a/app/assets/stylesheets/pages/_share.scss
+++ b/app/assets/stylesheets/pages/_share.scss
@@ -6,12 +6,22 @@
   justify-content: center;
 }
 
+.sharebook-item-content{
+  width: 100%;
+  max-width: 400px;
+  input{
+    width: 100%;
+    margin: auto;
+  }
+
+}
+
 
 .image-solo-share {
-  background: $primary-lighter;
   // min-height: calc(100vh - 50px - 60px);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
+  img {
+    max-width: 110px;
+    display: block;
+    margin: 30px auto;
+  }
 }
