--- a/app/views/books/borrow.html.erb
+++ b/app/views/books/borrow.html.erb
@@ -1,17 +1,20 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(189, 69, 31,0.6) 0%, rgba(99, 90, 67,0.6) 50%), url(<%= asset_path 'library4.jpg' %>);">
-  <div class="banner-content">
-    <p>Tell us what you are looking for</p>
+
+<div class='sharebook-item'>
+
+  <div class='sharebook-item-content'>
+
+    <div class="image-solo-share">
+      <%= image_tag("book_borrow.png", :alt => "Share a book") %>
+    </div>
+
+
     <form action="<%= books_search_url %>" class="navbar-wagon-search">
-      <input type="text" class="navbar-wagon-search-input" name="query" placeholder="Search for your favorite book, author">
+      <input type="text" class="navbar-wagon-search-input" name="query" placeholder="Your friend can help you">
       <button type="submit" class="navbar-wagon-search-btn">
         <i class="fa fa-search"></i>
       </button>
     </form>
 
   </div>
+
 </div>
-
-
-
-
-
