--- a/app/views/shared/_toptabs.html.erb
+++ b/app/views/shared/_toptabs.html.erb
@@ -16,7 +16,7 @@
     <span>Borrow</span>
   <% end %>
 
-  <%= link_to library_path(current_user), class: "tabs-ind", id: 'track' do %>
+  <%= link_to library_path, class: "tabs-ind", id: 'track' do %>
     <i class="mdi mdi-chart-bar my-icon"></i>
     <span>Track</span>
   <% end %>
