Work on front end and google picture

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -34,6 +34,8 @@ $primary:#BD451F;
 $primary-dark:#5E5E5E;
 $primary-light:#949494;
 $primary-lighter:#DCDCDC;
+$primary-even-lighter:#f6f6f6;
+
 
 $red: #EE5F5B;
 $blue: #BD451F;
