--- a/app/assets/stylesheets/pages/_share.scss
+++ b/app/assets/stylesheets/pages/_share.scss
@@ -1,5 +1,5 @@
 .sharebook-item {
-  background: $primary-lighter;
+  background: $primary-even-lighter;
   min-height: calc(100vh - 50px - 60px);
   display: flex;
   align-items: center;
