--- a/app/views/books/googleresults.html.erb
+++ b/app/views/books/googleresults.html.erb
@@ -23,7 +23,7 @@
         <%= hidden_field_tag(:author, book.authors) %>
         <%= hidden_field_tag(:isbn, book.isbn) %>
         <%= hidden_field_tag(:language, book.language) %>
-        <%= hidden_field_tag(:photo, book.image_link) %>
+        <%= hidden_field_tag(:google_cover, book.image_link) %>
         <%= button_tag "This is my book" %>
         <% end %>
       </div>
