--- a/app/assets/stylesheets/components/_card_user.scss
+++ b/app/assets/stylesheets/components/_card_user.scss
@@ -2,13 +2,19 @@
 //   margin-left: 0px;
 // }
 
+.is-small{
+  max-width: 700px;
+}
+
 .product {
   display: flex;
   align-items: center;
   transition: all 0.15s ease;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-  border-radius: 0;
+  border-radius: 4px;
   padding: 20px 0;
+  // border-top-right-radius: 3px;
+  // border-top-left-radius: 3px;
 }
 
 .profile_picture_card {
@@ -30,8 +36,8 @@
   color: $primary-dark;
 }
 .product-body p {
-  font-size: 12px;
-  font-weight: lighter;
+  font-size: 13px;
+  // font-weight: lighter;
   color: $primary-dark;
   margin-bottom: 0;
 }
@@ -54,7 +60,7 @@
 }
 
 .product img {
-  height: 55px;
+  max-width: 65px;
 
 }
 
