--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,12 +8,12 @@ PowOSh
   </div>
 
   <div class="add-margin-top">
-    <div class="container">
+    <div class="container is-small">
       <div class="row col-xs-12 col-sm-8 col-sm-offset-2">
         <% @books.last(10).reverse.each do |book| %>
 
         <%= link_to book_path(book.id) do %>
-        <div class="container">
+
           <div class="product">
 
             <div class='product-upvote'>
@@ -26,12 +26,14 @@ PowOSh
               <p>by <%= book.author %> - <%= book.language %></p>
             </div>
           </div>
-        </div>
+
         <% end %>
         <% end %>
       </div>
     </div>
   </div>
+
+
 
 
 <!--
