fixed colour of facebook button

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -13,7 +13,7 @@ $headings-font-family:    $header-font;
 // Semantic color scheme
 $brand-primary:   $blue;
 $brand-success:   $green;
-$brand-info:      $yellow;
+$brand-info:      $facebook; //i'm hijacking this for the facebook button since we don't use it.
 $brand-danger:    $red;
 $brand-warning:   $orange;
 
