--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -35,6 +35,7 @@ $primary-dark:#5E5E5E;
 $primary-light:#949494;
 $primary-lighter:#DCDCDC;
 
+$facebook: #43609C;
 $red: #EE5F5B;
 $blue: #BD451F;
 $yellow: #FDB631;
