sort of form for manual loans

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -46,6 +46,10 @@
   background: $primary-light;
 }
 
+.bg-primary-lighter {
+  background: $primary-lighter;
+}
+
 .row-bordered-top {
   border-top: 1px solid $primary;
   padding: 10px 0;
