--- a/app/views/loans/library.html.erb
+++ b/app/views/loans/library.html.erb
@@ -26,11 +26,12 @@
     </div>
   </div>
 
+  <%= @profiles %>
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-        <div class="tab-content ">
 
+        <div class="tab-content ">
 
           <div role="tabpanel" class="tab-pane active" id="todo">
             <%= render 'shared/loans_requests_friends' %>
