multiple work on front end

--- a/app/assets/stylesheets/components/_books.scss
+++ b/app/assets/stylesheets/components/_books.scss
@@ -5,11 +5,13 @@ body {
 
 #wrapper {
   width: 200px;
-  margin: 30px auto;
+  margin: 0px auto;
 }
 
 .book-container {
-  background-color: #FAFAFA
+  background-color: #FAFAFA;
+  padding: 30px 0px;
+  text-align: center;
 }
 
 /*********************
