--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -3,10 +3,11 @@
   <div class="banner-content">
     <h1>PowOSh</h1>
     <p>Share emotions with your friends</p>
-    <%= link_to new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" do %>
-    <div class="btn btn-primary btn-lg btn-login">Login</div>
-    <% end %>
-
+      <div class="home-button">
+        <%= link_to user_omniauth_authorize_path(:facebook), class: "navbar-wagon-item navbar-wagon-link" do %>
+        <div class="btn btn-primary btn-lg btn-login">Login with Facebook</div>
+        <% end %>
+      </div>
 
   </div>
 </div>
