--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -57,7 +57,7 @@
     <% else %>
 
     <!-- Login text link -->
-    <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to t(".sign_in", default: "Login"), user_omniauth_authorize_path(:facebook), class: "navbar-wagon-item navbar-wagon-link" %>
 
     <% end %>
 
