--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,64 @@
 <%= render 'shared/banner' %>
+
+<div class="card-box">
+  <div class="row">
+
+    <div class="col-xs-12 col-sm-4">
+      <div class="card-home">
+        <%= image_tag("home-share.png", :alt => "share") %>
+        <h1>Share</h1>
+        <div class="text-frame">
+        <p> Upload your favourite books on PowOSh so that your friends know they
+        can borrow it from you!
+        </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-sm-4">
+
+      <div class="card-home">
+        <%= image_tag("home-borrow.png", :alt => "borrow") %>
+        <h1>Borrow</h1>
+         <div class="text-frame">
+        <p> Have acces to all the books made available by your friends and
+        request one!
+        </p>
+        </div>
+      </div>
+
+
+    </div>
+
+    <div class="col-xs-12 col-sm-4">
+
+      <div class="card-home">
+        <%= image_tag("home-track.png", :alt => "track") %>
+        <h1>Track</h1>
+        <div class="text-frame">
+        <p> Manage your own library online and if your forgot where is one of your book,
+        PowOSh will tell you where it is!
+        </p>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</div>
+
+<div class="card-box-2">
+
+  <div class="sign-in-expl">
+    <h1>
+    Sign up with Facebook and start sharing your books!
+      <div class="home-button">
+        <%= link_to user_omniauth_authorize_path(:facebook), class: "navbar-wagon-item navbar-wagon-link" do %>
+          <div class="btn btn-primary btn-lg btn-login">Login with Facebook</div>
+        <% end %>
+      </div>
+    </h1>
+  </div>
+
+
+</div>
