--- a/app/views/loans/new.html.erb
+++ b/app/views/loans/new.html.erb
@@ -7,7 +7,8 @@
         <h3>Add Loan</h3>
          <%= simple_form_for(@loan, { url: book_loans_path(@book) } ) do |f| %>
           <p>Choose a friend using the app.</p>
-          <%= f.input :user_id, label: "Lend to:", collection: current_user.friends, prompt: "Select friend"%>
+          <!-- The label method used below is in the user model -->
+          <%= f.input :user_id, label: "Lend to:", collection: current_user.friends, label_method: :profile_first_name, prompt: "Select friend"%>
           <p>OR</p>
           <p>Lend to a friend not using the app.</p>
           <%= f.input :borrower_name_manual, label: "Friend's name:" %>
