--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -9,12 +9,14 @@
   justify-content: center;
 }
 .banner h1 {
-  font-size: 50px;
+  font-size: 70px;
+  font-family: 'Bad Script', cursive;
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
 }
 .banner p {
   font-size: 20px;
+  font-family: lato;
   font-weight: lighter;
   color: rgba(255, 255, 255, 0.7);
   margin-bottom: 20px;
