--- a/app/assets/stylesheets/layout/_toptabs.scss
+++ b/app/assets/stylesheets/layout/_toptabs.scss
@@ -8,6 +8,13 @@
     right: 0;
     bottom: 0;
   }
+  &.is-sticky-top {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 60px;
+    z-index: 1;
+  }
 
 }
 
