--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,7 @@
 PowOSh
 <% end %>
 
-
+<div class="wrapper-content">
   <div class="container add-margin-top text-center">
     <h3>Look who can make you happy!</h3>
   </div>
@@ -32,6 +32,7 @@ PowOSh
       </div>
     </div>
   </div>
+  </div>
 
 
 
@@ -51,4 +52,3 @@ PowOSh
 -webkit-linear-gradient(to bottom, #E3CBB8 0%, #FFFFFF 29%)
 -->
 
-<
