--- a/app/views/books/quickedit.html.erb
+++ b/app/views/books/quickedit.html.erb
@@ -1,3 +1,4 @@
+<div class="wrapper-content">
 <div class="container">
 <%= simple_form_for @book, :url => {:controller => 'books', :action => 'update'}, :method => :put do |f| %>
   <%= f.error_notification %>
@@ -17,3 +18,5 @@
 <% end %>
 
 </div>
+</div>
+
