--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -1,3 +1,4 @@
+<div class="wrapper-content">
 <h3><div class="container"> They can help you </div></h3>
 
 <div class="add-margin-top">
@@ -24,5 +25,5 @@
     </div>
   </div>
 </div>
-
+</div>
 
