--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title do %>
 <%= @book.title %> on PowOSh
 <% end %>
-
+<div class="wrapper-content">
 <div class='book-container'>
   <div id="wrapper">
     <!-- BOOK -->
@@ -89,7 +89,7 @@ Following appears if current user is different from Book owner
     </div>
   </div>
 </div>
-
+</div>
 
 
 
