--- a/app/views/loans/library.html.erb
+++ b/app/views/loans/library.html.erb
@@ -2,6 +2,7 @@
   <%= current_user.profile.first_name%>'s Library - PowOSh
 <% end %>
 
+<div class="wrapper-content">
 <div class="library-page">
   <div class="wrapper-no-padding-bottom header-wrapper">
     <div class="container">
@@ -57,4 +58,4 @@
     </div>
   </div>
 </div>
-
+</div>
