--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,12 @@
 <%= render 'shared/banner' %>
 
 <div class="card-box">
+<div class="container">
   <div class="row">
 
     <div class="col-xs-12 col-sm-4">
       <div class="card-home">
-        <%= image_tag("home-share.png", :alt => "share") %>
+        <%= image_tag("home-share.png", :alt => "share", height: 100) %>
         <h1>Share</h1>
         <div class="text-frame">
         <p> Upload your favourite books on PowOSh so that your friends know they
@@ -18,7 +19,7 @@
     <div class="col-xs-12 col-sm-4">
 
       <div class="card-home">
-        <%= image_tag("home-borrow.png", :alt => "borrow") %>
+        <%= image_tag("home-borrow-1.png", :alt => "borrow", height: 100) %>
         <h1>Borrow</h1>
          <div class="text-frame">
         <p> Have acces to all the books made available by your friends and
@@ -33,7 +34,7 @@
     <div class="col-xs-12 col-sm-4">
 
       <div class="card-home">
-        <%= image_tag("home-track.png", :alt => "track") %>
+        <%= image_tag("home-track.png", :alt => "track", height: 100) %>
         <h1>Track</h1>
         <div class="text-frame">
         <p> Manage your own library online and if your forgot where is one of your book,
@@ -60,5 +61,5 @@
     </h1>
   </div>
 
-
+</div>
 </div>
