--- a/app/views/shared/_toptabs.html.erb
+++ b/app/views/shared/_toptabs.html.erb
@@ -1,4 +1,4 @@
-<div class="tabs-profile">
+<div class="tabs-profile is-sticky-top">
 
 
   <%= link_to root_path, class: "tabs-ind", id: 'home' do %>
