--- a/app/views/books/googleresults.html.erb
+++ b/app/views/books/googleresults.html.erb
@@ -1,8 +1,10 @@
+<div class="wrapper-content">
+<div class="container">
 <div class="row">
   <% @books.first(20).each do |book| %>
 
 
-  <div class="container col-xs-12 col-sm-8 col-sm-offset-2">
+  <div class="col-xs-12 col-sm-8 col-sm-offset-2">
     <div class="product">
 
       <div class='product-upvote'>
@@ -32,7 +34,8 @@
   </div>
   <% end %>
 </div>
-
+</div>
+</div>
 
 
 <div class="tabs-profile is-sticky">
