--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,3 +1,4 @@
+<div class="wrapper-content">
 <div class="container text-center">
 <h2>Partage ton livre!</h2>
 </div>
@@ -23,4 +24,5 @@
   <%= f.button :submit %>
 <% end %>
 
+</div>
 </div>
