--- a/app/views/books/sharebook.html.erb
+++ b/app/views/books/sharebook.html.erb
@@ -1,4 +1,4 @@
-
+<div class="wrapper-content">
 <div class='sharebook-item'>
 
   <div class='sharebook-item-content'>
@@ -17,4 +17,5 @@
 
   </div>
 
+</div>
 </div>
