--- a/app/views/loans/new.html.erb
+++ b/app/views/loans/new.html.erb
@@ -1,3 +1,4 @@
+<div class="wrapper-content">
 <div class="padded bg-primary-lighter">
 
   <div class="container">
@@ -18,4 +19,5 @@
     </div>
   </div>
 
+</div>
 </div>
