favicon and meta

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <%= favicon_link_tag 'powosh.ico' %>
     <title><%= yield(:title) || "PowOSh" %></title>
     <title><%= meta_title %></title>
     <meta name="description" content="<%= meta_description %>">
