--- a/app/views/books/sharebook.html.erb
+++ b/app/views/books/sharebook.html.erb
@@ -8,7 +8,7 @@
     </div>
 
 
-    <form action="<%= books_googleresults_url %>" class="navbar-wagon-search">
+    <form action="<%= books_googleresults_path %>" class="navbar-wagon-search">
       <input type="text" class="navbar-wagon-search-input" name="query" placeholder="Look for your book">
       <button type="submit" class="navbar-wagon-search-btn">
         <i class="fa fa-search"></i>
