--- a/app/views/books/borrow.html.erb
+++ b/app/views/books/borrow.html.erb
@@ -8,7 +8,7 @@
     </div>
 
 
-    <form action="<%= books_search_url %>" class="navbar-wagon-search">
+    <form action="<%= books_search_path %>" class="navbar-wagon-search">
       <input type="text" class="navbar-wagon-search-input" name="query" placeholder="Your friend can help you">
       <button type="submit" class="navbar-wagon-search-btn">
         <i class="fa fa-search"></i>
