--- a/app/views/books/googleresults.html.erb
+++ b/app/views/books/googleresults.html.erb
@@ -1,40 +1,35 @@
 <div class="wrapper-content">
-<div class="container">
-<div class="row">
-  <% @books.first(20).each do |book| %>
+  <div class="container">
+    <div class="row">
+      <% @books.first(20).each do |book| %>
+
+      <%= link_to books_path(title: book.title, author: book.authors, isbn: book.isbn,
+      language: book.language, google_cover: book.image_link), method: :post do %>
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+        <div class="product">
+          <div class="google-pic">
+
+            <% if book.image_link %>
+              <% profile_image_path = book.image_link %>
+            <% else %>
+              <% profile_image_path = "book5.png" %>
+            <% end %>
+            <%= image_tag profile_image_path %>
+            <!-- <img =@book.user.profile.profile_picture class="product-image"> -->
+          </div>
+          <div class='product-body'>
+          <h3><%= book.title[0,150] %> </h3>
+            <p>by <%= book.authors %> - <%= book.language %></p>
+            <p>ISBN : <%= book.isbn %></p>
+          </div>
 
 
-  <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-    <div class="product">
-
-      <div class='product-upvote'>
+        </div>
       </div>
-      <div class="google-pic">
-      <% profile_image_path = book.image_link %>
-      <%= image_tag profile_image_path %>
-      <!-- <img =@book.user.profile.profile_picture class="product-image"> -->
-      </div>
-      <div class='product-body'>
-        <h3><%= book.title %> </h3>
-        <p>by <%= book.authors %> - <%= book.language %></p>
-        <p>ISBN : <%= book.isbn %></p>
-      </div>
-      <div class="text-center add-margin product-controls">
-        <%= form_tag(books_path, method: "post") do %>
-        <%= hidden_field_tag(:title, book.title) %>
-        <%= hidden_field_tag(:author, book.authors) %>
-        <%= hidden_field_tag(:isbn, book.isbn) %>
-        <%= hidden_field_tag(:language, book.language) %>
-        <%= hidden_field_tag(:google_cover, book.image_link) %>
-        <%= button_tag "This is my book" %>
-        <% end %>
-      </div>
-
+      <% end %>
+      <% end %>
     </div>
   </div>
-  <% end %>
-</div>
-</div>
 </div>
 
 
