--- a/app/assets/stylesheets/pages/_share.scss
+++ b/app/assets/stylesheets/pages/_share.scss
@@ -12,7 +12,7 @@
   input{
     width: 100%;
     margin: auto;
-    box-shadow: 0px 4px 4px rgba(0,0,0,0.2)
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
   }
 
 }
