requests from friends done with new cars

--- a/app/assets/stylesheets/components/_card_user.scss
+++ b/app/assets/stylesheets/components/_card_user.scss
@@ -115,3 +115,14 @@
 .product:hover .product-upvote { transform: scale(1.2) }
 .product:hover .product-controls-hidden a { color: #E6E6E6 }
 .product-upvote:hover .product-arrow { border-bottom: 9px solid #5898f1 }
+
+.no-border-bottom {
+  border-bottom: 0;
+}
+
+.product-with-buttons-box {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+  padding: 10px 0;
+
+}
