some small tweaks to requests page

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -2,6 +2,14 @@
   width: 40%;
   margin: 10px;
   font-size: 9px;
+  // max-width: 220px
+}
+
+@media (min-width: 768px) {
+  .btn-half-width {
+    font-size: 11px;
+  }
+
 }
 
 .label {
