--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -3,12 +3,12 @@
   width: 24%;
 }
 
-@media (min-width: 768px) {
-  .tab-xs-quarter {
-    font-size: 14px;
-    min-width: 120px;
-    width: auto;
+// @media (min-width: 768px) {
+//   .tab-xs-quarter {
+//     font-size: 14px;
+//     min-width: 120px;
+//     width: auto;
 
-  }
+//   }
 
-}
+// }
