--- a/app/assets/stylesheets/components/_card_user.scss
+++ b/app/assets/stylesheets/components/_card_user.scss
@@ -126,3 +126,11 @@
   padding: 10px 0;
 
 }
+
+
+.product-button-holder {
+  display: flex;
+  // justify-content: flex-end;
+  justify-content: center;
+
+}
