--- a/app/views/shared/_loans_requests_friends.html.erb
+++ b/app/views/shared/_loans_requests_friends.html.erb
@@ -11,7 +11,7 @@
       <% @requests_from_friends.each do |loan| %>
 
 
-      <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+      <div class="col-xs-12">
 
         <div class="product-with-buttons-box">
           <div class="product no-border-bottom">
@@ -24,7 +24,7 @@
             </div>
           </div>
 
-          <div>
+          <div class="product-button-holder">
             <%= link_to "Mark as Given", lend_book_path(loan), {class: "btn btn-primary btn-half-width", :method => :patch} %>
             <%= link_to "Reject Loan", reject_loan_path(loan), {class: "btn btn-default btn-half-width", :method => :patch} %>
           </div>
